deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-wh-example-backend
  namespace: wh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-wh-example-backend
  template:
    metadata:
      labels:
        app: ms-wh-example-backend
    spec:
      containers:
        - name: ms-wh-example-backend
          image: docker.io/whuaqui/ms-wh-example-backend:1.0.0-SNAPSHOT
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
      imagePullSecrets:
        - name: dockerhub-secret
